# ClawCare

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/: release.yml
.github/workflows/: ci.yml  release.yml
clawcare/: __init__.py  cli.py  config.py  discovery.py  gate.py  models.py  policy.py  report.py
clawcare/adapters/: __init__.py  base.py  registry.py
clawcare/guard/: __init__.py  activate.py  audit.py  config.py  scanner.py
clawcare/guard/hooks/: __init__.py  claude.py  openclaw.py
clawcare/guard/plugin_assets/: openclaw-plugin.ts  openclaw.plugin.json
clawcare/integrations/: __init__.py  claude_code.py  codex.py  cursor.py  openclaw.py
clawcare/rulesets/default/: command-injection.yml  data-exfiltration.yml  execution-abuse.yml  prompt-injection.yml  sensitive-data.yml
clawcare/scanner/: __init__.py  md_parser.py  py_analyzer.py  rules.py  scanner.py
demos/: README.md
demos/clean-claude-skill/: SKILL.md  review_utils.py
demos/cursor-project/evil-skill/: SKILL.md
demos/custom-adapter-demo/: README.md
demos/malicious-claude-skill/: SKILL.md  setup.py
demos/project-with-config/: .clawcare.yml  README.md
demos/project-with-config/build-tool/: SKILL.md
tests/: test_adapters.py  test_codex.py  test_config.py  test_cursor.py  test_env_exfil_rules.py  test_gate.py  test_golden.py  test_guard.py  test_models.py  test_policy.py  test_report.py  test_scan_scope.py  test_scanner.py
tests/fixtures/benign_docs/: README.md  SKILL.md  data.json
tests/fixtures/claude_benign_skill/: SKILL.md  helper.py
tests/fixtures/claude_manifest_violation/: clawcare.manifest.yml
tests/fixtures/claude_project/: README.md
tests/fixtures/codex_malicious/: AGENTS.md  AGENTS.override.md
(+31 files in other folders)
